<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:showAsAction="ifRoom"
		android:icon="@mipmap/more"
		android:id="@+id/more"
		android:title="选项菜单">
		<menu>
			<item
				android:id="@+id/about"
				android:icon="@mipmap/google_docs"
				android:title="@string/about_menu"
			/>
			<item
				android:id="@+id/account"
				android:icon="@mipmap/share_to"
				android:title="@string/share_menu"
			/>
			<item
				android:id="@+id/set"
				android:icon="@mipmap/settings"
				android:title="@string/setting_menu"
			/>
		<item
			android:id="@+id/qrcode"
			android:icon="@mipmap/qrcode"
			android:title="@string/qrcode_menu"
			/>
			<item
				android:id="@+id/exit"
				android:icon="@mipmap/exit"
				android:title="@string/exit_menu"
			/>
		</menu>
	</item>
</menu>
